--- a/peinture.html
+++ b/peinture.html
@@ -95,7 +95,7 @@
 										</div>
 								</header>
 								<!--<a href="single.html" class="image featured"><img src="images/logo.png" alt="" /></a> -->
-								<p align="justify"> Retrouvailles avec ma grand-mère après plusieurs années de distance. Celle-ci m'a acheté ma première toile et mes premiers tubes de peintures. J'ai alors commencé à peindre, rarement, par manque de patience bien que l'envie soit là. Puis j'ai peint trois ans plus tard une chouette : c'est la première fois que je prenais autant de temps pour peindre une toile (deux jours). Patience à rude épreuve mais résultat qui m'a donné envie de progresser. 
+								<p align="justify"> Retrouvailles avec ma grand-mère après plusieurs années de distance. Celle-ci m'a acheté ma première toile et mes premiers tubes de peintures. J'ai alors commencé à peindre, rarement, par manque de patience. Puis j'ai peint trois ans plus tard une chouette : c'est la première fois que je prenais autant de temps pour peindre une toile (deux jours). Patience à rude épreuve mais résultat qui m'a donné envie de progresser. 
 									<br> <br> La patience et la technique sont les clefs de la réussite ; je n'ai ni l'un ni l'autre en peinture et j'ai très souvent le seum. <br> Être têtue équilibre la balance.<br> <br> Bref, tout a commencé avec une chouette. <br> Merci mamie.</p>
 								<footer>
 									<ul class="actions">
