--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 									</div>
 								</header>
 								<p align="justify"> Sortante d'un bac ES mention Bien, j'ai intégré en 2018 la licence Mathématiques et Informatique Appliquées aux Sciences Humaines et Sociales, à l'université Lumière, Lyon II. J'ai obtenu ma licence en 2022 mention assez-bien, et ai continué dans un master MIASHS Data Science et Machine Learning. Une réorientation est en cours. </p>
-								<p align="justify"> Vous trouverez sur ce site mes projets universitaires (liste non exhaustive), mon CV et mes peintures. <br> <br> Pas sûre que ce site soit utile mais c'est marrant. </p>
+								<p align="justify"> Vous trouverez sur ce site mes projets universitaires (liste non exhaustive), mon CV et mes peintures. <br> <br> Pas sûr que ce site soit utile mais c'est marrant. </p>
 
 									<ul class="actions">
-										<li><a href="projetslicence.html" class="button large">A propos </a></li>
+										<li><a href="apropos.html" class="button large">A propos </a></li>
 										<li><a href="https://drive.google.com/file/d/1fpk9KTsTt-pLSGDl_2nrRwE6cj2aofuX/view?usp=sharing" class="button large next">Voir le CV</a></li>
-										<li><a href="https://drive.google.com/file/d/1okPX-o87WfWJnMyXLqCnczqC3_HzjFD3/view?usp=sharing" class="button large next"> Lettres de Recommandation </a></li>
 										<li><a href="projetslicence.html" class="button large next"> Projets universitaires </a></li>
+										<li><a href="https://drive.google.com/file/d/1okPX-o87WfWJnMyXLqCnczqC3_HzjFD3/view?usp=sharing" class="button large next"> Lettres de Recommandation</a></li>
 
 									</ul>
 									
@@ -135,7 +135,7 @@
 								<header>
 									<div class="title">
 										<h2> Projets peintures </h2>
-										<p> Askip je suis une artiste </p>
+										<p> Askip je suis une artiste #covidlong </p>
 									</div>
 								
 								</header>
@@ -156,7 +156,7 @@
 								</header>
 								<a href="single.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								<section id="footer" align="center">
-									<p> Je reste disponible par mail et instagram. </p>
+									<p> Je reste disponible par mail et sur instagram. </p>
 									<ul class="icons">
 										<li><a href="https://www.instagram.com/anouchka.beal/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="mailto:anouchka.recard@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -492,7 +492,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<p class="logo"><img src="images/portrait2.png" alt="" /></p>
+								<p class="logo"><img src="images/test&.jpg" alt="" /></p>
 								<header>
 									<h2> M1 Mathématiques Informatique Appliquées aux Sciences Humaines et Sociales </h2>
 									<p> Data Science et Machine Learning </p>
